metadata/force-app/main/default/objects/Contact/fields/Linkedin_industry__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_industry__c</fullName>
    <description>The industry automatically generated by Linkedin</description>
    <label>Linkedin industry</label>
    <type>TextArea</type>
</CustomField>