metadata/force-app/main/default/objects/Contact/fields/Make_an_appointment__c.field-meta.xml
<CustomField>
    <fullName>Make_an_appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set up webinar or meeting with the key people involved in the project (minimum 2).</inlineHelpText>
    <label>Make an appointment</label>
    <type>Checkbox</type>
</CustomField>