metadata/force-app/main/default/objects/Contact/fields/Marketing_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Webdam field</description>
    <label>Marketing Opt-in</label>
    <type>Checkbox</type>
</CustomField>