metadata/force-app/main/default/objects/Contact/fields/Marketing_Region_NEW__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Region_NEW__c</fullName>
    <formula>/*TEXT(Account.Marketing_Region_NEW__c)*/
&apos;&apos;</formula>
    <label>Marketing Region NEW (Deprecated)</label>
    <type>Text</type>
</CustomField>