metadata/force-app/main/default/objects/Contact/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <label>Marketing Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Review Sites</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Paid Referral</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Social Organic</fullName>
            </value>
            <value>
                <fullName>Unassessed</fullName>
                <default>true</default>
                <label>Unassessed</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>UserGems</fullName>
                <label>Usergems</label>
            </value>
            <value>
                <fullName>6Sense</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>