metadata/force-app/main/default/objects/Contact/fields/Marketing_sourced__c.field-meta.xml
<CustomField>
    <fullName>Marketing_sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead that results out of a campaign that was sponsored by marketing, e.g. events, global campaigns, website visitors</description>
    <label>Marketing sourced</label>
    <type>Checkbox</type>
</CustomField>