metadata/force-app/main/default/objects/Contact/fields/Marketing_Suspended_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Suspended_Date__c</fullName>
    <description>wd field</description>
    <label>Marketing Suspended Date</label>
    <type>Date</type>
</CustomField>