metadata/force-app/main/default/objects/Contact/fields/Marketing_Suspended_Reason__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Suspended_Reason__c</fullName>
    <description>wd field</description>
    <label>Marketing Suspended Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>