metadata/force-app/main/default/objects/Contact/fields/Marketo_State_Value__c.field-meta.xml
<CustomField>
    <fullName>Marketo_State_Value__c</fullName>
    <description>wd field</description>
    <label>Marketo State Value</label>
    <length>120</length>
    <type>Text</type>
</CustomField>