metadata/force-app/main/default/objects/Contact/fields/MK_Customer_Fit_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit_Segment__c</fullName>
    <description>MadKudu Customer Fit scoring (very good, good, medium, low) 
Predicts if this person looks like a potential customer based on the analysis of past customers and their firmo, demo, techno... enrichment. 
Scoring model controllable on MadKudu&apos;s platform app.madkudu.com</description>
    <inlineHelpText>Possible values: very good, good, medium, low. Focus your efforts on very good and good leads, they look the most like your customers.</inlineHelpText>
    <label>MK Customer Fit Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>very good</fullName>
                <color>#3366FF</color>
                <default>true</default>
                <label>very good</label>
            </value>
            <value>
                <fullName>good</fullName>
                <color>#66E9BD</color>
                <label>good</label>
            </value>
            <value>
                <fullName>medium</fullName>
                <color>#F3D904</color>
                <label>medium</label>
            </value>
            <value>
                <fullName>low</fullName>
                <color>#A53711</color>
                <label>low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>