metadata/force-app/main/default/objects/Contact/fields/MK_Lead_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Engagement_Score__c</fullName>
    <description>MadKudu Engagement score (0 to 100) based on the analysis of the lead behavior on your website, product, marketing content... 
Scoring model controllable on MadKudu&apos;s platform app.madkudu.com</description>
    <inlineHelpText>Score from 0 to 100. Based on the analysis of the lead behavior on your website, product, and marketing content.</inlineHelpText>
    <label>MK Lead Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>