metadata/force-app/main/default/objects/Contact/fields/MK_Lead_Grade_Score__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Grade_Score__c</fullName>
    <description>Combination of the MK Customer Fit score and the MK Lead Engagement score. 
Range from 0 to 100</description>
    <inlineHelpText>Score from 0 to 100. Prioritize the highest-scored leads. 
Combination of the MK Customer Fit score and the MK Lead Engagement score.</inlineHelpText>
    <label>MK Lead Grade Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>