metadata/force-app/main/default/objects/Contact/fields/More_info_on_Bynder__c.field-meta.xml
<CustomField>
    <fullName>More_info_on_Bynder__c</fullName>
    <inlineHelpText>Answer to Question: Would you like to receive more information on Bynder?</inlineHelpText>
    <label>More information on Bynder?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>