metadata/force-app/main/default/objects/Contact/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-3653: Indicates if a contact is MQLd or not.</description>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>