metadata/force-app/main/default/objects/Contact/fields/MQL_d_on_Lead__c.field-meta.xml
<CustomField>
    <fullName>MQL_d_on_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-3653: Indicates if a lead is MQLd or not before converting to contact.</description>
    <label>MQL’d on Lead</label>
    <type>Checkbox</type>
</CustomField>