metadata/force-app/main/default/objects/Contact/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <description>Webdam field
&quot;This field will be auto-populated by Marketo when the contact record reaches MQL. This will be updated every time the contact changes to MQL.&quot;</description>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>