metadata/force-app/main/default/objects/Contact/fields/Names_of_relevant_contacts__c.field-meta.xml
<CustomField>
    <fullName>Names_of_relevant_contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Names of relevant contacts</label>
    <type>Checkbox</type>
</CustomField>