metadata/force-app/main/default/objects/Contact/fields/Need_1__c.field-meta.xml
<CustomField>
    <fullName>Need_1__c</fullName>
    <label>Need 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>