metadata/force-app/main/default/objects/Contact/fields/Need_2__c.field-meta.xml
<CustomField>
    <fullName>Need_2__c</fullName>
    <label>Need 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>