metadata/force-app/main/default/objects/Contact/fields/Need_3__c.field-meta.xml
<CustomField>
    <fullName>Need_3__c</fullName>
    <label>Need 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>