metadata/force-app/main/default/objects/Contact/fields/New_Business_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Opportunity_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Business Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>