metadata/force-app/main/default/objects/Contact/fields/Newsletter_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wbdam field</description>
    <label>Newsletter Opt-in</label>
    <type>Checkbox</type>
</CustomField>