metadata/force-app/main/default/objects/Contact/fields/Newsletters__c.field-meta.xml
<CustomField>
    <fullName>Newsletters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field</description>
    <label>Newsletters</label>
    <type>Checkbox</type>
</CustomField>