metadata/force-app/main/default/objects/Contact/fields/next_step__c.field-meta.xml
<CustomField>
    <fullName>next_step__c</fullName>
    <inlineHelpText>Next Step</inlineHelpText>
    <label>Next step</label>
    <type>TextArea</type>
</CustomField>