metadata/force-app/main/default/objects/Contact/fields/No_Newsletters__c.field-meta.xml
<CustomField>
    <fullName>No_Newsletters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No customer Newsletters</label>
    <type>Checkbox</type>
</CustomField>