metadata/force-app/main/default/objects/Contact/fields/NPS_Response_This_Month__c.field-meta.xml
<CustomField>
    <fullName>NPS_Response_This_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if a contact has responded to an NPS survey</description>
    <label>NPS Response This Month</label>
    <type>Checkbox</type>
</CustomField>