metadata/force-app/main/default/objects/Contact/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;250</fullName>
            </value>
            <value>
                <fullName>250-2500</fullName>
            </value>
            <value>
                <fullName>2500-15000</fullName>
            </value>
            <value>
                <fullName>15000+</fullName>
            </value>
            <value>
                <fullName>0-10</fullName>
            </value>
            <value>
                <fullName>11-100</fullName>
            </value>
            <value>
                <fullName>101-500</fullName>
            </value>
            <value>
                <fullName>501-1000</fullName>
            </value>
            <value>
                <fullName>1001-5000</fullName>
            </value>
            <value>
                <fullName>5001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>