metadata/force-app/main/default/objects/Contact/fields/Number_of_Employees_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Number of Employees Lookup (Deprecated)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Number of Employees)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>