metadata/force-app/main/default/objects/Contact/fields/Number_of_Times_Served_as_Reference__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Served_as_Reference__c</fullName>
    <description>Webdam field</description>
    <label>Number of Times Served as Reference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>