metadata/force-app/main/default/objects/Contact/fields/Nw_bsnss_oppty_clicked__c.field-meta.xml
<CustomField>
    <fullName>Nw_bsnss_oppty_clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nw bsnss oppty clicked</label>
    <type>Checkbox</type>
</CustomField>