metadata/force-app/main/default/objects/Contact/fields/of_Discovery_Calls_completed__c.field-meta.xml
<CustomField>
    <fullName>of_Discovery_Calls_completed__c</fullName>
    <description>BODEV-1037: Filled by Activity Counter AppExchange.</description>
    <label># of Discovery Calls completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>