metadata/force-app/main/default/objects/Contact/fields/of_future_events__c.field-meta.xml
<CustomField>
    <fullName>of_future_events__c</fullName>
    <description>The number of events on this lead with due date in the future.</description>
    <inlineHelpText>The number of events on this lead with due date in the future.</inlineHelpText>
    <label># of future events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>