metadata/force-app/main/default/objects/Contact/fields/of_new_business_opportunities__c.field-meta.xml
<CustomField>
    <fullName>of_new_business_opportunities__c</fullName>
    <description>Number of Open New Business Opportunities excluding expansion portal opps.</description>
    <formula>Account.of_new_business_opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of new business open opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>