metadata/force-app/main/default/objects/Contact/fields/ON24CN__EngagementLevel__c.field-meta.xml
<CustomField>
    <fullName>ON24CN__EngagementLevel__c</fullName>
    <description>Field that comes from ON24 with levels as Low, Medium or High</description>
    <label>ON24 Engagement Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>