metadata/force-app/main/default/objects/Contact/fields/ON24CN__ProspectEngagementProfileURL__c.field-meta.xml
<CustomField>
    <fullName>ON24CN__ProspectEngagementProfileURL__c</fullName>
    <description>Field that contains the PEP Url that Relates one Lead or Contact with Webcast</description>
    <label>ON24 Prospect Engagement Profile URL</label>
    <type>Url</type>
</CustomField>