metadata/force-app/main/default/objects/Contact/fields/On_Going_Project_Looking_At_DAM__c.field-meta.xml
<CustomField>
    <fullName>On_Going_Project_Looking_At_DAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On-Going Project Looking At DAM</label>
    <type>Checkbox</type>
</CustomField>