metadata/force-app/main/default/objects/Contact/fields/Only_product_communications__c.field-meta.xml
<CustomField>
    <fullName>Only_product_communications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-3472 : Used to identify the users opted for only product communications.</description>
    <label>Only product communications</label>
    <type>Checkbox</type>
</CustomField>