metadata/force-app/main/default/objects/Contact/fields/Orbit_Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Orbit_Portal_ID__c</fullName>
    <description>Orbit Portal ID</description>
    <label>Orbit Portal ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>