metadata/force-app/main/default/objects/Contact/fields/Orbit_Portal_Type__c.field-meta.xml
<CustomField>
    <fullName>Orbit_Portal_Type__c</fullName>
    <label>Orbit Portal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>