metadata/force-app/main/default/objects/Contact/fields/Orbit_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Orbit_Portal_URL__c</fullName>
    <description>URL of Orbit account</description>
    <label>Orbit Portal URL</label>
    <type>Url</type>
</CustomField>