metadata/force-app/main/default/objects/Contact/fields/Original_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Original_Referrer__c</fullName>
    <description>mkto wd field</description>
    <label>Original Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>