metadata/force-app/main/default/objects/Contact/fields/Original_Search_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Original_Search_Phrase__c</fullName>
    <description>mkto wd field</description>
    <label>Original Search Phrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>