metadata/force-app/main/default/objects/Contact/fields/Original_Source_Info__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Info__c</fullName>
    <description>mkto wd field</description>
    <label>Original Source Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>