metadata/force-app/main/default/objects/Contact/fields/Original_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Type__c</fullName>
    <description>mkto wd field</description>
    <label>Original Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>