metadata/force-app/main/default/objects/Contact/fields/P2P_opt_in__c.field-meta.xml
<CustomField>
    <fullName>P2P_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bodev-4492 Add P2P interest opt-in field to Salesforce</description>
    <inlineHelpText>Opt in for the Peer-to-Peer Mentorship Program</inlineHelpText>
    <label>P2P opt-in</label>
    <type>Checkbox</type>
</CustomField>