metadata/force-app/main/default/objects/Contact/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <inlineHelpText>What pains or challenges is the prospect experiencing? Why do they need a solution?</inlineHelpText>
    <label>Pain</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>