metadata/force-app/main/default/objects/Contact/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <description>BODEV-3499: Used to store the value of &apos;Partner Account Form&apos; on lead. Mapped and filled during lead conversion.</description>
    <inlineHelpText>Partner Account Form on Lead</inlineHelpText>
    <label>Partner Account</label>
    <type>TextArea</type>
</CustomField>