metadata/force-app/main/default/objects/Contact/fields/Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email__c</fullName>
    <description>BODEV-3499: Used to store the value of &apos;Partner Email Address&apos; on lead. Mapped and filled during lead conversion.</description>
    <inlineHelpText>Partner Email Address on Lead</inlineHelpText>
    <label>Partner Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>