metadata/force-app/main/default/objects/Contact/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <description>BODEV-3499: Used to store the value of &apos;Partner Name Form&apos; on lead. Mapped and filled during lead conversion.</description>
    <inlineHelpText>Partner Name Form on Lead</inlineHelpText>
    <label>Partner Name</label>
    <type>TextArea</type>
</CustomField>