metadata/force-app/main/default/objects/Contact/fields/Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Source__c</fullName>
    <description>Indicates specific source in case Lead Source is VASP/Partner.</description>
    <formula>TEXT(Account.Partner_Source__c)</formula>
    <inlineHelpText>Indicates specific source in case Lead Source is VASP/Partner.</inlineHelpText>
    <label>Partner Source</label>
    <type>Text</type>
</CustomField>