metadata/force-app/main/default/objects/Contact/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>BODEV-1285: Persona field for Leads/Contacts. Inherited via Lead Conversion</description>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Persona</valueSetName>
    </valueSet>
</CustomField>