metadata/force-app/main/default/objects/Contact/fields/Portal_Created__c.field-meta.xml
<CustomField>
    <fullName>Portal_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Created</label>
    <type>Checkbox</type>
</CustomField>