metadata/force-app/main/default/objects/Contact/fields/portal_id__c.field-meta.xml
<CustomField>
    <fullName>portal_id__c</fullName>
    <formula>Account.Portal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>portal id</label>
    <type>Text</type>
</CustomField>