metadata/force-app/main/default/objects/Contact/fields/Power_User__c.field-meta.xml
<CustomField>
    <fullName>Power_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client stakeholders, typically frequent users of the system. Want to receive Bynder Webinar, Masterclass and Product updates by newsletter.
GS NPS: No
Newsletter: Yes</description>
    <inlineHelpText>Client stakeholders, typically frequent users of the system. Want to receive Bynder Webinar, Masterclass and Product updates by newsletter.
GS NPS: No
Newsletter: Yes</inlineHelpText>
    <label>Power User</label>
    <type>Checkbox</type>
</CustomField>