metadata/force-app/main/default/objects/Contact/fields/PPC_Campaign_Medium__c.field-meta.xml
<CustomField>
    <fullName>PPC_Campaign_Medium__c</fullName>
    <description>Webdam field
&quot;Use utm_medium to identify a medium such as cost-per-click.&quot;</description>
    <label>PPC Campaign Medium</label>
    <type>TextArea</type>
</CustomField>